--- a/popup/popup.html
+++ b/popup/popup.html
@@ -30,6 +30,8 @@
     
 </form>
 <div id="configSet"></div>
+<div id="textSet"></div>
+<button id="lesen">Vorlesen</button>
 <script src="popup.js"></script>
 </body>
 </html>
